--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation platform('com.google.firebase:firebase-bom:32.7.1')
+    implementation 'io.github.pilgr:paperdb:2.7.2'
 }
