Added: - Final version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         variant ->
             variant.outputs.each{
                 output->
-                    def name = "Protrike v0.1.20240312a.apk"
+                    def name = "Protrike v1.0.apk"
                     output.outputFileName = name
             }
     }
